testcase chage